# llama.cpp

./: .gitignore  0migrate.py  AGENTS.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  HIFI_BUILD_GUIDE.md  IMatrix_Guide.md  Makefile  Q3_HIFI_FINDINGS_AND_ROADMAP.md  Q3_HIFI_OPTIMIZATION_PLAN.md  Q3_HIFI_SPEED_OPTIMIZATION_PLAN.md  Q3_Quantization_Comparison.md  Q4_HIFI_ROADMAP.md  Q4_K_HIFI_ROADMAP.md  README.md  SECURITY.md  benchmark_speed_test.ps1  benchmark_speed_test.sh  build-xcframework.sh  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  llama.cpp  output.md
.devops/: cpu.Dockerfile
.github/actions/: windows-setup-curl.yml
.github/workflows/: build-linux-cross.yml  build-openvino.yml  build.yml  code-style.yml  docker.yml  server.yml
common/: CMakeLists.txt  arg.cpp  arg.h  catalog.h  chat-inline-templates.h.in  chat-parser.h  chat.cpp  chat.h  common.cpp  common.h  console.cpp  console.h  download.cpp  download.h  hf-cache.h  http.h  log.cpp  log.h  preset.cpp  preset.h  speculative.cpp  vision.cpp
common/jinja/: README.md  caps.cpp  caps.h  jinja-caps.cpp  jinja-caps.h  jinja-compiler.h  jinja-interpreter.cpp  jinja-interpreter.h  jinja-lexer.cpp  jinja-lexer.h  jinja-parser.cpp  jinja-parser.h  jinja-runtime.cpp  jinja-runtime.h  jinja-string.h  jinja-type-infer.h  jinja-utils.h  jinja-value.cpp  jinja-value.h  jinja-vm-builtins.cpp  jinja-vm.cpp  jinja-vm.h  jinja-workaround.h  lexer.cpp  lexer.h  parser.cpp  parser.h  runtime.cpp  runtime.h  string.cpp  string.h  utils.h  value.cpp  value.h
conversion/: __init__.py  base.py  deepseek.py  exaone.py  glm.py
docs/: build.md  install.md  multimodal.md  preset.md
docs/development/: HOWTO-add-model.md
docs/multimodal/: development.md
docs/quantization/: Q3_HIFI.md
examples/: CMakeLists.txt
examples/asr/: CMakeLists.txt  asr-ultravox.cpp  dr_wav.h  whisper-preprocessor.h
examples/batched/: batched.cpp
examples/batched-bench/: batched-bench.cpp
examples/control-vector-generator/: control-vector-generator.cpp
examples/cvector-generator/: cvector-generator.cpp
examples/embedding/: embedding.cpp
examples/llava/: CMakeLists.txt  README.md  clip-impl.h  clip.cpp  clip.h  gemma3-cli.cpp  llava-cli.cpp  llava.cpp  llava2.cpp  llava2.h  minicpmv-cli.cpp  mtmd-cli.cpp  mtmd.cpp  mtmd.h  qwen2vl-cli.cpp  tests.sh
examples/tts/: CMakeLists.txt  README-csm.md  README-mimi.md  convert_csm_to_gguf.py  convert_mimi_to_gguf.py  csm-demo.txt  csm_generate_speaker.py  mimi-model.cpp  mimi-model.h  mimi.cpp  tts-csm-data.h  tts-csm.cpp  tts-impl.cpp  tts.cpp
ggml/: CMakeLists.txt
ggml/src/ggml-ane/: CMakeLists.txt  ggml-ane.mm
include/: llama-cpp.h  llama.h
models/: ggml-vocab-bailingmoe.gguf.out  ggml-vocab-bert-bge-large.gguf.out  ggml-vocab-bloom.gguf.out  ggml-vocab-chameleon.gguf.out  ggml-vocab-codeshell.gguf.out  ggml-vocab-dbrx.gguf.out  ggml-vocab-deepseek-v3.gguf.out  ggml-vocab-exaone.gguf.out  ggml-vocab-falcon3.gguf.out  ggml-vocab-gemma-2.gguf.out  ggml-vocab-gigachat.gguf.out  ggml-vocab-glm4.gguf.out  ggml-vocab-gpt-4o.gguf.out  ggml-vocab-gpt3-finnish.gguf.out  ggml-vocab-helium.gguf.out  ggml-vocab-jais.gguf.out  ggml-vocab-jina-v1-en.gguf.out  ggml-vocab-jina-v2-code.gguf.out  ggml-vocab-jina-v2-de.gguf.out  ggml-vocab-jina-v2-es.gguf.out  ggml-vocab-llama4.gguf.out  ggml-vocab-megrez.gguf.out  ggml-vocab-minerva-7b.gguf.out  ggml-vocab-phi-2.gguf.out  ggml-vocab-poro-chat.gguf.out  ggml-vocab-roberta-bpe.gguf.out  ggml-vocab-seed-coder.gguf.out  ggml-vocab-smaug-bpe.gguf.out  ggml-vocab-smollm.gguf.out  ggml-vocab-stablelm2.gguf.out  ggml-vocab-superbpe.gguf.out  ggml-vocab-t5.gguf.out  ggml-vocab-tekken.gguf.out  ggml-vocab-trillion.gguf.out  ggml-vocab-viking.gguf.out
requirements/: requirements-convert_hf_to_gguf.txt  requirements-convert_legacy_llama.txt
scripts/: compare-logits.py  compare-logprobs.py  gen-chat-inline-templates.py  serve-static.js  server-test-function-call.py  sync_vendor.py  ui-assets.cmake
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-chat.cpp  llama-chat.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-ext.h  llama-grammar.cpp  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-kv-cache-dsv4.cpp  llama-kv-cache-dsv4.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-model-loader.cpp  llama-model-loader.h  llama-model-saver.cpp  llama-model.cpp  llama-model.h  llama-quant.cpp  llama-sampler.cpp  llama-vocab.cpp  llama-vocab.h  llama.cpp
tests/: CMakeLists.txt  test-arg-parser.cpp  test-backend-ops.cpp  test-backend-sampler.cpp  test-chat-inline-templates.cpp  test-chat-jinja.cpp  test-chat-template.cpp  test-chat.cpp  test-gguf.cpp  test-jinja.cpp  test-llama-archs.cpp  test-model-load-buffer.cpp  test-mtmd-c-api.c  test-q3-hifi-text.txt  test-q3-hifi.py  test-q3-hifi.sh  test-quantize-stats.cpp  test-rope.cpp  test-rope.h  test-tokenizer-random.py
tools/: CMakeLists.txt  create_mixed_imatrix_dataset.py  download_coder_imatrix_datasets.py  download_imatrix_datasets.py
tools/cli/: CMakeLists.txt  README.md  cli.cpp
tools/cvector-generator/: CMakeLists.txt  cvector-generator.cpp  cvector-pca.hpp  negative.txt  positive.txt
tools/main/: CMakeLists.txt  main.cpp
tools/mtmd/: CMakeLists.txt  clip-graph.h  clip-impl.h  clip-mobilenet.h  clip-model.h  clip.cpp  clip.h  mtmd-audio.cpp  mtmd-audio.h  mtmd-cli.cpp  mtmd-gen.cpp  mtmd-helper.cpp  mtmd-helper.h  mtmd-image.cpp  mtmd-image.h  mtmd-impl.h  mtmd.cpp  mtmd.h  tests.sh
tools/mtmd/debug/: mtmd-debug.cpp  mtmd-debug.h
tools/mtmd/models/: deepseekocr.cpp  dotsocr.cpp  exaone4_5.cpp  falcon-ocr.cpp  gemma3n-audio.cpp  gemma4v.cpp  glm4v.cpp  granite-speech.cpp  lfm2-audio-enc.cpp  mobilenetv5.cpp  models.h  qwen2vl.cpp  qwen3a.cpp  qwen3vl.cpp  siglip.cpp  utuvl.cpp  whisper-enc.cpp
tools/mtmd/tests/: test-1-extracted.md  test-1-extracted.txt  test-deepseek-ocr.py  tests-requirements.txt
(+404 files in other folders)
